# macrofortress

./: Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: workflow.yml
examples/: bedrooms.mak
macrofortress/: main.py
macrofortress/commands/: convert.py
macrofortress/constants/: help.py
src/: cli.py
src/commands/: cmd_map.py  hello_world.py
src/constants/: logging.py  macro.py
test/: test_cli.py
