[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "python-starter"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["click>=8.1.3"]

[project.scripts]
starter = "src.cli:cli"

[project.optional-dependencies]
dev = [
  "black>=22.10.0",
  "pytest>=7.2.0",
  "pytest-cov>=4.0.0",
  "ruff>=0.0.219",
]

[tool.ruff]
exclude = [".env", ".venv", "venv", "notebooks"]
select = ["E", "F", "I", "W"]

[tool.coverage.paths]
source = ["src"]

[tool.coverage.run]
branch = true
relative_files = true

[tool.coverage.report]
show_missing = true
fail_under = 80

[tool.black]
extend-exclude = '''
/(
  | .env
  | .venv
  | venv
  | notebooks
)/
'''
