[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "macrofortress"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["typer>=0.9.0", "opencv-python>=4.7.0.68"]

[project.scripts]
macrofortress = "macrofortress.main:app"

[project.optional-dependencies]
dev = [
  "black>=22.10.0",
  "pytest>=7.2.0",
  "pytest-cov>=4.0.0",
  "ruff>=0.0.219",
  "build>=0.10.0"
]

[tool.ruff]
exclude = [".env", ".venv", "venv", "notebooks"]
select = ["E", "F", "I", "W"]

[tool.coverage.paths]
source = ["macrofortress"]

[tool.coverage.run]
branch = true
relative_files = true

[tool.coverage.report]
show_missing = true
fail_under = 80

[tool.black]
extend-exclude = '''
/(
  | .env
  | .venv
  | venv
  | notebooks
)/
'''
